--- a/Git. Основы/Основные команды.md
+++ b/Git. Основы/Основные команды.md
@@ -14,8 +14,12 @@
 Есть Master ветка - оригинал
 Branch - создание доп ветки
 
+**git romote -v - посмотреть название удаленыынх рпепозиториев**
 
-sjiodgfosd
+**git push origin main - отправляю коммит с моей ветки мейн ( локальноый ) в свой удаленный репозиторий оригин**
+
+
+git commit -m - 
 
 
 
