--- a/Git. Основы/Основные команды.md
+++ b/Git. Основы/Основные команды.md
@@ -1,13 +1,8 @@
 **git clone - закачать к себе проект**
-
 **git add - добавить изменения ;автоматом определяются все измененные файлы**
-
 **git commit - зафиксировать изменения**
-
 **git push - отправить изменения**
-
 **git pull - скачать проект с изменениями**
-
 **merge - соединить, слить воедино (объединить изменения)**
 
 Если  у нас есть проект и мы хотим создать аналог проекта то
@@ -25,6 +20,18 @@ Branch - создание доп ветки
 
 
 git commit -m - 
+
+
+
+fdskjfdslfksdjfl
+fldskfl;sdfklsfsd
+
+fjdsfjdsklfjkdslf 
+fdsl;fdsf
+
+fdsfsdf
+
+fdsfsdf
 
 
 
