--- a/Git. Основы/Основные команды.md
+++ b/Git. Основы/Основные команды.md
@@ -1,4 +1,4 @@
-**git clone - закачать к себе проект**
+ **git clone - закачать к себе проект**
 **git add - добавить изменения ;автоматом определяются все измененные файлы**
 **git commit - зафиксировать изменения**
 **git push - отправить изменения**
@@ -19,20 +19,8 @@ Branch - создание доп ветки
 **git push origin main - отправляю коммит с моей ветки мейн ( локальноый ) в свой удаленный репозиторий оригин**
 
 
-git commit -m - 
+git commit -m "Коммент" - Обязательная команда
 
 
 
-fdskjfdslfksdjfl
-fldskfl;sdfklsfsd
-
-fjdsfjdsklfjkdslf 
-fdsl;fdsf
-
-fdsfsdf
-
-fdsfsdf
-
-
-
-
+GITHUBCIK
