--- a/Module 1/Git. Основы/Основные команды.md
+++ b/Module 1/Git. Основы/Основные команды.md
@@ -14,7 +14,12 @@
 Есть Master ветка - оригинал
 Branch - создание доп ветки
 
-**git romote -v - посмотреть название удаленыынх рпепозиториев**
+git add . - Для добавления изменений
+
+git status - для проверки изменений
+
+
+**git romote -v - посмотреть название удаленыннх репозиториев**
 
 **git push origin main - отправляю коммит с моей ветки мейн ( локальноый ) в свой удаленный репозиторий оригин**
 
