--- a/Module 1/PHP. Основы/Массивы.md
+++ b/Module 1/PHP. Основы/Массивы.md
@@ -1,4 +1,4 @@
-Запись нескольких данных в 1 перменную
+Запись нескольких данных в 1 перменую
 
 $person ['victor', 20, 'swimming', true, 'cat' , 'barsik'];
 
